METASOURCES = AUTO
AM_CPPFLAGS = -I$(top_srcdir)/zu/src -I$(top_srcdir)/zm/src \
	-I$(top_srcdir)/zt/src -I$(top_srcdir)/ze/src -I$(top_srcdir)/zi/src
	@Z_CPPFLAGS@
AM_CXXFLAGS = @Z_CXXFLAGS@
AM_LDFLAGS = @Z_LDFLAGS@
pkginclude_HEADERS = ZvLib.hh \
	ZvCf.hh ZvCSV.hh ZvError.hh ZvEnum.hh ZvHashCSV.hh \
	ZvHeapCSV.hh ZvDaemon.hh \
	ZvRingParams.hh ZvThreadParams.hh \
	ZvMxParams.hh \
	ZvSeqNo.hh ZvMsgID.hh ZvIOQueue.hh ZvEngine.hh
lib_LTLIBRARIES = libZv.la
libZv_la_CPPFLAGS = $(AM_CPPFLAGS) -DZV_EXPORTS 
libZv_la_LDFLAGS = @Z_SO_LDFLAGS@
libZv_la_SOURCES = ZvLib.cc \
	ZvCf.cc ZvCSV.cc ZvDaemon.cc ZvEngine.cc
libZv_la_LIBADD = \
	$(top_builddir)/zi/src/libZi.la $(top_builddir)/ze/src/libZe.la \
	$(top_builddir)/zt/src/libZt.la $(top_builddir)/zm/src/libZm.la \
	$(top_builddir)/zu/src/libZu.la \
	@FBS_LIBS@ \
	@Z_IO_LIBS@ @Z_ZT_LIBS@ @Z_MT_LIBS@
